# latency-bot

./: .gitignore  CMakeLists.txt  README.md
app/: live_main.cpp  main.cpp
examples/: sample_books.csv
include/latency_arb/: Backtester.hpp  BookManager.hpp  Config.hpp  CsvLogger.hpp  LiveMarketData.hpp  MarketObserver.hpp  PaperTrader.hpp  RiskAnalyzer.hpp  SignalDetector.hpp  StatisticsEngine.hpp  ThreadSafeQueue.hpp  TradeValidator.hpp  Types.hpp
out-live/: paper_validation.csv  statistics.csv
src/: Backtester.cpp  BookManager.cpp  Config.cpp  CsvLogger.cpp  LiveMarketData.cpp  MarketObserver.cpp  PaperTrader.cpp  RiskAnalyzer.cpp  SignalDetector.cpp  StatisticsEngine.cpp  TradeValidator.cpp
tests/: engine_tests.cpp
